[package]
name = "laboratory"
authors = ["amir0ghahremanian"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
win_subst = "0.0.3"
# winapi = { version = "0.3.9", features = ["winuser", "fileapi"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
strip = true
