[package]
name = "laboratory"
authors = ["amir0ghahremanian"]
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
serde = { version = "1.0.197", features = ["derive"] }
tar = "0.4.40"
toml = "0.8.12"
win_subst = "0.0.3"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
strip = true
